deployment/site/sandbox/network/gateway.yaml
# Copyright (c) 2023 Schubert Anselme <schubert@anselm.es>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program. If not, see <https://www.gnu.org/licenses/>.
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: cilium
  annotations:
    cert-manager.io/issuer: cilium-ca-issuer
spec:
  gatewayClassName: cilium
  listeners:
    - hostname: hubble.sandbox.dev.local
      name: hubble-sandbox-dev-local-https
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        certificateRefs:
          - name: hubble-tls
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: default
  annotations:
    cert-manager.io/cluster-issuer: default-ca-issuer
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces: All
    - name: https
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces: All
